--- a/syno_movies/config.php.template
+++ b/syno_movies/config.php.template
@@ -9,7 +9,7 @@ define ( 'cSYNOuserID', 1026 );                                            // Sy
 define ( 'cDbConnKODIstr', 'mysql:host=127.0.0.1;dbname=kodi_video107' );  // KODI video DB connection string
 define ( 'cDbConnKODIuser', 'kodi' );                                      // KODI DB User
 define ( 'cDbConnKODIpwd', '' );                                           // KODI DB Password
-define ( 'cKODIsrcPath', 'nfs://ds.nayenezgani.cz' );                      // KODI root path to synology
-define ( 'cKODIurl', 'http://mc.nayenezgani.cz' );                         // KODI URL
+define ( 'cKODIsrcPath', '<kodi_src_path_to_synology>' );                  // KODI root path to synology
+define ( 'cKODIurl', 'http://<kodi_url>' );                                // KODI URL
 define ( 'cSYNOvolume', '/volume1/video' );                                // Synology volume path
 define ( 'cSYNOvolumeTest', 'C:\\temp' );                                  // Local test path
